# of_notifier

./: .env.example  .gitignore  LICENSE  README.md  app.py  propresenter.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: release.yml
install/: README.md  install.sh  uninstall.sh
message_forwarder/: README.md  index.js  package-lock.json  package.json
utils/: cli.py
